# Caro-CPP

./: README.md
Caro project (C++, QT)/: Assignment_06_ex_HIEUTH12.pro  bot.cpp  bot.h  carocontroller.cpp  carocontroller.h  guide.qml  main.cpp  main.qml  win.qml  with_bot.qml  with_human.qml
Caro_CLI_CPP/: CMakeLists.txt  bot.cpp  bot.h  caro.cpp  caro.h  display.cpp  display.h  filehandlingexception.cpp  filehandlingexception.h  filemanager.cpp  filemanager.h  main.cpp  match.cpp  match.h  player.cpp  player.h  playermanager.cpp  playermanager.h
